# cotizador-alibaba-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  LEEME.txt  PLAN_CONSOLIDADOS_POR_CATEGORIA.md  README.md  descargar_adjuntos.py  docker-compose.yml  extraer_con_claude.py  extraer_pdf_adobe.py  llenar-hd-higiene.bat  llenar-hd.bat  llenar_formato_hd.py  pdf_a_formato_hd.py  pyproject.toml  reclasificar.py  run-local.bat
app/: auth.py  calidad.py  catalogo_ia.py  catalogo_io.py  clasificador.py  cli.py  competencia.py  db.py  exportar.py  formato_hd.py  fotos_embebidas.py  help_content.py  ingest.py  jobs.py  main.py  mantenimiento.py  modelos.py  pdf_pipeline.py  pricing.py  proyecto_middleware.py  routes.py  routes_proyectos.py
config/: aranceles.yml  categorias.yml
scripts/: backfill_fotos_embebidas.py  dedup_productos.py  dedupe_y_procesar.py  derivar_pzas_caja_desde_nw.py  fix_cbm_y_derivar_piezas.py  generar_hd_por_categoria.py  heredar_fotos_variantes.py  ingestar_y_clasificar.py  limpiar_indigest.py  migrar_a_multiproyecto.py  migrar_agregar_arancel_categoria.py  migrar_agregar_archivo_pdf_producto.py  migrar_agregar_competencia_sitios.py  migrar_agregar_item_type.py  migrar_agregar_peso_caja.py  migrar_agregar_pzas_caja.py  migrar_agregar_tags_producto.py  migrar_crear_tabla_aranceles.py  migrar_crear_tabla_usuarios.py  migrar_productos_autoincrement.py  rescatar_claude_truncado.py  seed_aranceles.py  seed_categorias.py
tests/: conftest.py  test_api.py  test_aranceles.py  test_catalogo_ia.py  test_catalogo_io.py  test_clasificador.py  test_ingest.py  (+9 more)
(+31 files in other folders)
