[project]
name = "mascotas-bd"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "pdfservices-sdk>=4.0",
    "pillow>=10.0",
    "pypdfium2>=4.30",
    "pywin32>=306; sys_platform == 'win32'",
    "pyyaml>=6.0",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
